--- a/package.json
+++ b/package.json
@@ -14,12 +14,8 @@
   "dependencies": {
     "concurrently": "^7.1.0",
     "express": "^4.18.1",
-    "fast-folder-size": "^1.6.2",
     "fluent-ffmpeg": "^2.1.2",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "sharp": "^0.30.4",
-    "video-react": "^0.15.0"
+    "sharp": "^0.30.4"
   },
   "devDependencies": {
     "nodemon": "^2.0.16"
