--- a/package.json
+++ b/package.json
@@ -13,8 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.1",
-    "sharp": "^0.30.4",
-    "socket.io": "^4.5.1"
+    "sharp": "^0.30.4"
   },
   "devDependencies": {
     "concurrently": "^7.2.1",
