--- a/package.json
+++ b/package.json
@@ -12,11 +12,16 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cross-env": "^7.0.3",
+    "electron": "^19.0.9",
+    "electron-builder": "^23.1.0",
+    "electron-is-dev": "^2.0.0",
     "express": "^4.18.1",
-    "sharp": "^0.30.4"
+    "sharp": "^0.30.4",
+    "wait-on": "^6.0.1"
   },
   "devDependencies": {
-    "concurrently": "^7.2.1",
+    "concurrently": "^7.3.0",
     "nodemon": "^2.0.16"
   }
 }
