--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "electron": "^19.0.9",
     "electron-builder": "^23.1.0",
     "electron-is-dev": "^2.0.0",
+    "exifr": "^7.1.3",
     "express": "^4.18.1",
     "sharp": "^0.30.4",
     "wait-on": "^6.0.1"
