--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "client": "npm start --prefix client",
+    "client": "npm run dev --prefix client",
     "server": "nodemon server.js",
     "all": "concurrently \"npm run server\" \"npm run client\""
   },
