--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "exifr": "^7.1.3",
     "express": "^4.18.1",
     "sharp": "^0.30.4",
+    "socket.io": "^4.5.1",
     "wait-on": "^6.0.1"
   },
   "devDependencies": {
