--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^13.5.0",
     "electron-is-dev": "^2.0.0",
     "exifr": "^7.1.3",
+    "get-media-dimensions": "^2.0.2",
     "node-sass": "^7.0.1",
     "node-watch": "^0.7.3",
     "react": "^18.2.0",
