--- a/package.json
+++ b/package.json
@@ -45,9 +45,14 @@
     ]
   },
   "devDependencies": {
+    "@types/jest": "^29.1.2",
+    "@types/node": "^18.8.5",
+    "@types/react": "^18.0.21",
+    "@types/react-dom": "^18.0.6",
     "concurrently": "^7.3.0",
     "electron": "^20.1.0",
     "electron-builder": "^23.3.3",
+    "typescript": "^4.8.4",
     "wait-on": "^6.0.1"
   },
   "build": {
