--- a/package.json
+++ b/package.json
@@ -1,28 +1,30 @@
 {
   "name": "filemanager",
-  "version": "0.1.0",
+  "version": "1.0.0",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "electron-is-dev": "^2.0.0",
-    "node-sass": "^7.0.1",
     "node-watch": "^0.7.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
+    "sass": "^1.56.1",
     "sharp": "^0.30.7",
     "web-vitals": "^2.1.4"
   },
-  "main": "public/main.js",
+  "main": "public/electron.js",
+  "homepage": "./",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "electron": "wait-on tcp:3000 && electron .",
-    "dev": "concurrently -k \"npm start\" \"npm run electron\""
+    "dev": "concurrently -k \"npm start\" \"npm run electron\" ",
+    "release": "npm run build && electron-builder --win --x64"
   },
   "eslintConfig": {
     "extends": [
@@ -51,5 +53,12 @@
     "electron": "^20.1.0",
     "electron-builder": "^23.3.3",
     "wait-on": "^6.0.1"
+  },
+  "build": {
+    "productName": "File Manager",
+    "target": "File Manager",
+    "extraFiles": [
+      "./Misc"
+    ]
   }
 }
