--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "electron-is-dev": "^2.0.0",
+    "node-watch": "^0.7.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
@@ -44,14 +45,9 @@
     ]
   },
   "devDependencies": {
-    "@types/jest": "^29.1.2",
-    "@types/node": "^18.8.5",
-    "@types/react": "^18.0.26",
-    "@types/react-dom": "^18.0.6",
     "concurrently": "^7.3.0",
     "electron": "^20.1.0",
     "electron-builder": "^23.3.3",
-    "typescript": "^4.9.4",
     "wait-on": "^6.0.1"
   },
   "build": {
